--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,3 +24,7 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew assembleRelease
+    - uses: actions/upload-artifact@v3
+      with:
+        name: app
+        path: app/build/outputs/apk/app-release-unsigned.apk
