--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,14 +19,21 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew assembleRelease
-    - name: find apk
-      run: ls -al app/build/outputs/apk/release
-    - uses: actions/upload-artifact@v3
+    - name: Sign Apk
+      uses: r0adkll/sign-android-release@v1
+      id: sign_apk
+      with:
+        releaseDirectory: app/build/outputs/apk/release
+        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+        alias: ${{ secrets.ALIAS }}
+        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+        keyPassword: ${{ secrets.KEY_PASSWORD }}
+    - name: Upload Signed Apk
+      uses: actions/upload-artifact@v3
       with:
         name: app
-        path: app/build/outputs/apk/release/app-release-unsigned.apk
+        path: ${{steps.sign_apk.outputs.signedReleaseFile}}
